update node design and fix alignment issue

--- a/frontend/src/app/modules/orgchart/chart-node/chart-node.component.css
+++ b/frontend/src/app/modules/orgchart/chart-node/chart-node.component.css
@@ -1,137 +1,69 @@
 .oc-groups {
+    position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .orgchart > :host {
     align-items: center;
 }
 
-.orgchart > :host > .oc-node::after {
-    content: "";
-    box-sizing: border-box;
-    bottom: -10px;
-    left: 50%;
-    height: 10px;
-    width: 2px;
-    position: absolute;
-    background-color: rgba(217, 83, 79, 0.8);
-}
-
 .orgchart > :host > .oc-node.oc-is-collapsed::after {
+    height: 64px;
+    top: 64px;
     display: none;
 }
 
 .orgchart > :host > .oc-groups > .oc-group > :host::before {
-    height: 35px; /* adjust the vertical postion of link line ⊢ */
-    top: -10px;
+    /*height: 1135px; /* adjust the vertical postion of link line ⊢ */
+    top: 36px;
 }
 
 .oc-node {
-    width: 140px;
-    font-family: Arial;
-    box-sizing: border-box;
-    position: relative;
-    padding: 3px;
-    margin: 0;
-    border: 2px solid transparent;
-    text-align: center;
-}
-
-.oc-node:hover, .oc-node.oc-is-selected {
-    background-color: rgba(238, 217, 54, 0.5);
-}
-
-.oc-node .oc-node-heading {
-    box-sizing: border-box;
-    padding: 2px;
-    margin: 0;
-    width: 130px;
-    height: 20px;
-    text-align: center;
-    font-size: 0.75rem;
-    font-weight: bold;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    background-color: rgba(217, 83, 79, 0.8);
-    color: #fff;
-    border-radius: 4px 4px 0 0;
-}
-
-.oc-node .oc-node-content {
-    box-sizing: border-box;
-    padding: 2px;
-    width: 130px;
-    height: 20px;
-    font-size: 0.625rem;
-    border: 1px solid rgba(217, 83, 79, 0.8);
-    border-radius: 0 0 4px 4px;
-    text-align: center;
-    background-color: #fff;
-    color: #333;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.oc-node .oc-toggle-btn {
-    color: #fff;
-    background-color: rgba(68, 157, 68, 0.6);
-    position: absolute;
-    left: 5px;
-    bottom: 5px;
+    /*border: 3px solid transparent;*/
+    text-align: left;
 }
 
 .oc-group {
-    display: flex;
-    flex-direction: column;
-    padding-left: 20px;
     position: relative;
-    padding-top: 20px;
+    display: flex;
+    flex-direction: row;
 }
 
 .orgchart > :host > .oc-groups > .oc-group:first-child {
-    padding-left: 10px;
+
 }
 
 .oc-group:not(:last-child)::before {
-    content: "";
-    box-sizing: border-box;
-    top: 10px;
-    left: 12px;
-    width: calc(100% - 2px);
-    position: absolute;
-    border-color: rgba(217, 83, 79, 0.8);
-    border-style: solid;
-    border-width: 0 0 2px 0;
+
 }
 
 .orgchart > :host > .oc-groups > .oc-group:first-child::before {
-    width: calc(100% + 8px);
-    left: 2px;
+
 }
 
 :host {
     position: relative;
+    align-items: center;
     display: flex;
     flex-direction: column;
+    padding-top: 128px;
 }
 
 :host:not(:last-child) {
-    padding-bottom: 10px;
+
 }
 
 .oc-group > :host::before {
-    content: "";
+
     box-sizing: border-box;
-    height: 35px; /* adjust the vertical postion of link line ⊢ */
-    width: 10px;
+
     position: absolute;
     left: -10px;
     top: -10px;
-    border-color: rgba(217, 83, 79, 0.8);
+    border-color: grey;
     border-style: solid;
-    border-width: 0 0 2px 2px;
+    border-width: 3px 3px 0 0;
 }
 
 /* adjust the vertical postion of link line ⊢ */
@@ -140,31 +72,22 @@
     top: -20px;
 }
 
-:host:not(:last-child)::after {
-    content: "";
-    box-sizing: border-box;
-    height: calc(100% - 35px); /* adjust the vertical postion of link line ⊢ */
-    width: 10px;
-    position: absolute;
-    left: -10px;
-    top: 25px; /* adjust the vertical postion of link line ⊢ */
-    border-color: rgba(217, 83, 79, 0.8);
-    border-style: solid;
-    border-width: 0 0 0 2px;
+.node-card {
+    width: 200px;
+    height: 80px;
+    margin-right: 80px;
 }
 
-.oc-icon {
-    display: inline-block;
-    width: 1rem;
-    height: 1rem;
-    line-height: 1rem;
-    text-align: center;
+.node-card:active {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    z-index: 99999;
 }
 
-.oc-icon-minus::before {
-    content: "\2212";
+.mat-card-content {
+    position: relative;
+    top: 24px;
 }
 
-.oc-icon-plus::before {
-    content: "\002B";
-}
+div.inline { float:left; }
